@@ -32,6 +32,7 @@ $ -> Language fix or change
  # [#24983] modifying Beez 20 to compatibility with RTL Thanks Mahmood and Ofer.
  # [#24996] There is no featured button in the tool bar, so no way to make multiple articles featured. Thanks Elin.
  # [#24929] Multiselect not implemented in all views. Thanks Ian and Andrea.
+ # [#25008] JNO/JYES instead JSHOW/JHIDE in mod_weblinks.xml Thanks Serge and Bill.
  
 20-Feb-2011 Jean-Marie Simonet
  # [#24916] Missing class blog_children. Thanks Markus and Bill.
